@@ -35,15 +35,15 @@ public:
   int getMapCount();
   Cal::UserData getMapUserData(int mapId);
   int getMeshCount();
-  int getNormals(float *pNormalBuffer);
+  int getNormals(float *pNormalBuffer, int stride=0);
   float getShininess();
   void getSpecularColor(unsigned char *pColorBuffer);
   int getSubmeshCount(int meshId);
-  int getTextureCoordinates(int mapId, float *pTextureCoordinateBuffer);
+  int getTextureCoordinates(int mapId, float *pTextureCoordinateBuffer, int stride=0);
   int getVertexCount();
-  int getVertices(float *pVertexBuffer);
-  int getTangentSpaces(int mapId, float *pTangentSpaceBuffer);
-  int getVerticesAndNormals(float *pVertexBuffer);
+  int getVertices(float *pVertexBuffer, int stride=0);
+  int getTangentSpaces(int mapId, float *pTangentSpaceBuffer, int stride=0);
+  int getVerticesAndNormals(float *pVertexBuffer, int stride=0);
   int getVerticesNormalsAndTexCoords(float *pVertexBuffer,int NumTexCoords=1);
   bool isTangentsEnabled(int mapId);
   bool selectMeshSubmesh(int meshId, int submeshId);
